[tool.poetry]
name = "carsapi"
version = "0.1.0"
description = ""
authors = ["LuisHBeck <beck.henrique.luis@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
pydantic = "^2.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
